--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "name": "atlasfn-syr0-ctrl",
   "buildCommand": "echo 'Static site - no build needed'",
   "installCommand": "echo 'No dependencies to install'",
   "outputDirectory": "."
