Fix Vercel routing to ballsackblud.html

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
   ],
   "routes": [
     {
+      "src": "/",
+      "dest": "/ballsackblud.html"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     }
